--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 			content="Frontend Developer, Mobile Developer, Open Source, Freelance Web Developer, Freelance Mobile Developer, React Native Developer, Developer Portfolio" />
 
 		<meta name="description" content="Page description" />
-		<meta property="og:title" content="Williams Samuel - Frontend Developer" />
+		<meta property="og:title" content="Shubha Jha - Frontend Developer" />
 		<meta
 			property="og:description"
-			content="Williams Samuel is a self-taught Frontend Web Developer based in Lagos State, Nigeria,  who specializes in building exceptional digital experience and passionate about web and mobile development." />
+			content="Shubha Jha is a self-taught Frontend Web Developer based in Lagos State, Nigeria,  who specializes in building exceptional digital experience and passionate about web and mobile development." />
 		<meta
 			property="og:image"
 			content="https://williamssam.netlify.app/assets/samuel.jpg" />
-		<meta property="og:image:alt" content="Williams Samuel" />
+		<meta property="og:image:alt" content="Shubha Jha" />
 		<meta property="og:locale" content="en_GB" />
 		<meta property="og:type" content="website" />
 		<meta name="twitter:card" content="summary_large_image" />
@@ -38,7 +38,7 @@
 		<!-- boxicons -->
 		<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 		<script src="./script.js" defer></script>
-		<title>Williams Samuel - Frontend Developer</title>
+		<title>Shubha Jha - Frontend Developer</title>
 	</head>
 	<body>
 		<!-- only for keyboard users -->
