--- a/index.html
+++ b/index.html
@@ -88,7 +88,29 @@
 							</a>
 						</li>
 						<li>
+							<a
+								href="https://github.com/Subha-2601"
+								rel="noreferrer"
+								target="_blank"
+								aria-label="link to github profile"
+								><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: currentColor;">
+  <path d="M12 0.297c-6.63 0-12 5.373-12 12 0 5.302 
+    3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 
+    0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61 
+    -.546-1.387-1.333-1.757-1.333-1.757-1.087-.744.084-.729.084-.729 
+    1.205.084 1.84 1.236 1.84 1.236 1.07 1.835 2.809 1.305 
+    3.495.998.108-.776.418-1.305.762-1.605-2.665-.3-5.466-1.332-5.466-5.93 
+    0-1.31.467-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 
+    0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 
+    1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 
+    3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 
+    1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 
+    5.92.435.372.81 1.102.81 2.222 0 1.606-.015 
+    2.896-.015 3.286 0 .315.21.69.825.57C20.565 
+    22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
+</svg>
 
+							</a>
 						</li>
 					</ul>
 
@@ -136,7 +158,7 @@
 			<!-- about section -->
 			<section class="about-me" id="about">
 				<div class="container" data-aos="fade-up">
-					<img src="./assets/suar2.jpg" alt="Shubha Jha" />
+					<img src="./assets/suar3.jpg" alt="Shubha Jha" />
 					<article>
 						<p class="subtitle">Who is Shubha Jha?</p>
 	 					<h2 class="title">A Bit About Me</h2>
@@ -149,9 +171,6 @@
 </p>
 <p>
   My background gives me an appreciation for how design and logic intersect, and I bring a creative mindset to every problem I encounter. I care more about the why than the how — and I think that helps me see things differently.
-</p>
-<p>
-  Outside of tech, you’ll often find me dancing, having fun, or cheering on MBA Batch— always observing, always reflecting, and always wondering what I’ll create next.
 </p>
 
 						</div>
@@ -193,10 +212,7 @@
 					<article data-aos="fade-up">
 						<p class="subtitle">My projects</p>
 						<h2 class="title">Somethings I Built</h2>
-						{% comment %} <p class="info">
-							I like to stay busy and always have a project in the works. Take a
-							look at some of the applications I've have built
-						</p> {% endcomment %}
+						
 					</article>
 						<!-- 02 -->
 						<article class="project">
@@ -223,7 +239,7 @@
 									<li>CSS</li>
 									<li>JavaScript</li>
 									<li>php</li>
-									<li>MySQL/li>
+									<li>MySQL</li>
 								</ul>
 								
 							</div>
