--- a/index.html
+++ b/index.html
@@ -216,16 +216,11 @@
 					</article>
 						<!-- 02 -->
 						<article class="project">
-							<a
-								href="https://themovieflix.netlify.app/"
-								target="_blank"
-								rel="noreferrer"
-								class="project-img"
-								><img
+							<img
 									src="./assets/movieflix.jpg"
 									alt="the movieflix screenshot"
 									title="the/movieflix"
-							/></a>
+							/>
 							<div>
 								<h3>01</h3>
 								<h2>The OnlyViewers</h2>
